--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/favicon (3).ico">
+  <meta name="Resume" content="Get to know me!">
+  <meta name="author" content="862405619">
 
-  <title>John Doe - Business Administration</title>
+  <title>Brianna Tejeda - Elementary Teacher</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Brianna Tejeda</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/briannatejeda.jpeg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,27 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Brianna Tejeda
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">School of Education</div>
+        <p class="lead mb-4"> As an undergraduate student at the esteemed University of California, Riverside (UCR), I have embarked on a journey fueled by a deep-seated passion for education and a fervent desire to shape the minds of tomorrow. Currently pursuing a degree in Education within the School of Education, my focus lies specifically in elementary teaching, where I believe the foundation of a child's academic and personal growth is laid.One of the defining characteristics of my approach to education is my innate creativity and love for crafting. I firmly believe that learning should not only be informative but also enjoyable and immersive. Thus, I constantly seek out innovative ways to integrate hands-on, interactive activities into my lesson plans, ensuring that each child is not only engaged but also actively participating in their own learning journey. Whether it's designing collaborative art projects or orchestrating imaginative storytelling sessions, I strive to create an environment where curiosity is nurtured and exploration is encouraged.<br><br> 
+        Central to my identity as an aspiring educator is my unwavering patience and genuine affinity for children. I find great joy in being in their presence, and I am deeply committed to understanding and addressing their individual needs and learning styles. From fostering a supportive classroom culture to providing personalized attention to each student, I am dedicated to creating a safe and inclusive space where every child feels valued and empowered to reach their full potential.
 
-        Enter bio here<br><br>
+My journey in education has been marked by a series of notable achievements, chief among them being the recipient of a prestigious teacher scholarship. This honor not only serves as a testament to my academic excellence and dedication to the field but also reaffirms my commitment to serving as a catalyst for positive change within the education system. It is a privilege that I do not take lightly, and I am determined to honor it by continuing to strive for excellence in all aspects of my academic and professional endeavors.<br><br>
 
-        Enter bio here
+        Looking ahead, I am filled with a profound sense of excitement and anticipation for the future that lies before me. Armed with a wealth of knowledge, a heart full of passion, and a steadfast commitment to making a difference, I am eager to embark on the next chapter of my journey towards becoming an exceptional elementary teacher. With each passing day, I am reminded of the immense privilege and responsibility that comes with shaping the minds and hearts of the next generation, and I am ready to embrace it wholeheartedly.
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://github.com/BriannaTejeda">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://www.youtube.com/channel/UCvyOa8nyD-1XNoE-SbLWEWQ">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://www.youtube.com/watch?v=Bli_u4L_W1E&list=LL&index=13&t=62s">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:briannatejeda26@gmail.com">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -95,13 +96,13 @@
             <h3 class="mb-0">Developer</h3>
             <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Worked at Popeyes<br> 
+              • Working at UCR Trio Upward Bound Program<br>
+              • Experience with kids<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">July 2022 - Present</span>
           </div>
         </div>
 
@@ -152,35 +153,10 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Undergrad in School of Education</div></div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
-          </div>
-        </div>
+            <span class="text-primary">August 2023 - Present</span>
 
       </div>
     </section>
@@ -191,7 +167,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/canva.jpeg" width="500px">
+            <img src="img/inclassexperience.jpeg" width="500px"><br>
+            <img src="img/popeyes.jpeg" width="500px">
+            <img src="img/ucr-and-bell-tower.jpg" width="500px"><br>
         </center>
       </div>
     </section>
@@ -199,7 +178,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Brianna Tejeda</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
